--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Web Starter Kit",
-  "short_name": "WSK",
+  "name": "sky.stl.cool",
+  "short_name": "STL.COOL",
   "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128",
@@ -20,6 +20,6 @@
       }],
   "start_url": "/index.html?homescreen=1",
   "display": "standalone",
-  "background_color": "#3E4EB8",
-  "theme_color": "#2F3BA2"
+  "background_color": "#2A2A2A",
+  "theme_color": "#1B1B1B"
 }
